syntax = "proto3";

package pb;

option go_package = "internal/data/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";

import "dtos/current_traffic_data_detection_section.proto";
import "dtos/traffic_requests.proto";
import "dtos/traffic_responses.proto";
import "dtos/traffic_statistics.proto";


option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  }
  security: {
    security_requirement: {
      key: "bearer"
    }
  }
};

service CurrentTrafficDataByDetectionSectionService {
  rpc ListCurrentTrafficDataByDetectionSections(ListTrafficDataByDetectionSectionRequest) returns (ListCurrentTrafficDataByDetectionSectionsResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/current/detection_section/list"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc GetCurrentTrafficDataByDetectionSection(GetTrafficDataByDetectionSectionRequest) returns (GetCurrentTrafficDataByDetectionSectionsResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/current/detection_section/single"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc CreateCurrentTrafficDataByDetectionSection(CreateCurrentTrafficDataByDetectionSectionRequest) returns (CreateCurrentTrafficDataByDetectionSectionResponse) {
    option (google.api.http) = {
      post: "/api/v1/traffic/current/detection_section",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc UpdateCurrentTrafficDataByDetectionSection(UpdateCurrentTrafficDataByDetectionSectionRequest) returns (UpdateCurrentTrafficDataByDetectionSectionResponse) {
    option (google.api.http) = {
      patch: "/api/v1/traffic/current/detection_section",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc DeleteCurrentTrafficDataByDetectionSection(DeleteTrafficDataByDetectionSectionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/traffic/current/detection_section"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };    
  }

  rpc BulkCreateCurrentTrafficDataByDetectionSection(BulkCreateTrafficDataByDetectionSectionRequest) returns (BulkCreateTrafficDataByDetectionSectionResponse) {
    option (google.api.http) = {
      post: "/api/v1/traffic/current/detection_section/bulk",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc GetCurrentTrafficDataByDetectionSectionStatistics(GetTrafficDataByDetectionSectionStatisticsRequest) returns (GetCurrentTrafficDataByDetectionSectionStatisticsResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/current/detection_section/statistics"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc ListCurrentTrafficDataByDetectionSectionDaily(ListTrafficDataByDetectionSectionDailyRequest) returns (ListCurrentTrafficDataByDetectionSectionDailyResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/current/detection_section/daily"     
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc DownloadCurrentTrafficDataByDetectionSection(DownloadTrafficDataByDetectionSectionRequest) returns (DownloadResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/current/detection_section/download"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }
}

message ListCurrentTrafficDataByDetectionSectionsResponse {
  repeated CurrentTrafficDataByDetectionSection current_traffic_data_by_detection_section = 1;
  uint32 total_count = 2;
}


message GetCurrentTrafficDataByDetectionSectionsResponse {
  repeated CurrentTrafficDataByDetectionSection current_traffic_data_by_detection_section = 1;
  uint32 total_count = 2;
}

message CreateCurrentTrafficDataByDetectionSectionRequest {
  CurrentTrafficDataByDetectionSection current_traffic_data_by_detection_section = 1;
}

message CreateCurrentTrafficDataByDetectionSectionResponse {
  CurrentTrafficDataByDetectionSection current_traffic_data_by_detection_section = 1;
}

message UpdateCurrentTrafficDataByDetectionSectionRequest {
  CurrentTrafficDataByDetectionSection current_traffic_data_by_detection_section = 1;
}

message UpdateCurrentTrafficDataByDetectionSectionResponse {
  CurrentTrafficDataByDetectionSection current_traffic_data_by_detection_section = 1;
}


message GetCurrentTrafficDataByDetectionSectionStatisticsResponse {
  string data_source_name = 1;
  uint32 records_count = 2;
  google.protobuf.Timestamp first_record_timestamp = 3;
  google.protobuf.Timestamp last_record_timestamp = 4;
  repeated CurrentTrafficDataByDetectionSectionStatistics statistics_by_detection_section = 5;
}

message ListCurrentTrafficDataByDetectionSectionDailyResponse {
  repeated CurrentTrafficDataByDetectionSection daily_stats = 1;
}
